Header + 1parte main ok

--- a/index.html
+++ b/index.html
@@ -10,26 +10,108 @@
     <body>
         <header>
             <!--Prima parte esercizio-->
-            <div>
-
+            <!--<div class="container-fluid" style="height: 50px; background-color: rgb(10, 0, 0);" id="Parte-iniziale">
+                <span class=" text-left text-primary " style="margin-left:5%">Portfolio</span>
+                <span class=" text right text-primary" style="margin-right:5%" ><u>CONTACT ME</u></span>-->
+            <div class="container-fluid row justify-content-between " style="height: 50px; background-color: rgb(10, 0, 0);" >
+                    <div class="col-2 text-primary">
+                        <p style="margin-top:5%;margin-left:20%;">Portfolio</p>
+                    </div>
+                    <div class="col-2 text-primary">
+                        <p style="margin-top:5%"><u>CONTACT ME</u></p>
+                    </div>
             </div>
         </header>
         <main>
             <!--Foto + nome-->
-            <div>
-
+            <div class="container-fluid text-center" style="height: 500px; background-color: rgb(8, 201, 226);">
+                <img src="img/undraw_profile_pic_ic5t.svg" style="height:65%; margin-top:3%;" alt="Foto-Profilo">
+                <h4>Pinco Pallo</h4>
+                <span>WEB DESIGNER</span>
             </div>
-            <!--Portfolio con immagini-->
-            <div>
-
+            
+            <!--Portfolio con immagini 1-->
+            <h4 class="text-center" style="margin-top:1%">PORTFOLIO</h4>
+            <!--<div class="container-fluid">-->
+                <div class="container">
+                    <div class="row align-items-start">
+                      <div class="col">
+                        <div class="shadow rounded">
+                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            </div>
+                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
+                            molestie vestibulum vestibulum.
+                            </figure>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="shadow rounded">
+                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            </div>
+                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
+                            molestie vestibulum vestibulum.
+                            </figure>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="shadow rounded">
+                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            </div>
+                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
+                            molestie vestibulum vestibulum.
+                            </figure>
+                        </div>
+                      </div>
             </div>
+
+            <!--Portfolio con immagini 2-->
+                <div class="container" style="margin-top:2%">
+                    <div class="row align-items-start">
+                      <div class="col">
+                        <div class="shadow rounded">
+                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            </div>
+                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
+                            molestie vestibulum vestibulum.
+                            </figure>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="shadow rounded">
+                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            </div>
+                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
+                            molestie vestibulum vestibulum.
+                            </figure>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="shadow rounded">
+                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            </div>
+                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
+                            molestie vestibulum vestibulum.
+                            </figure>
+                        </div>
+                      </div>
+            </div>
+            
             <!--Form-->
-            <div>
+            <div class="container-fluid">
 
             </div>
         </main>
         <footer>
             <!--Location-->
+            <div class="container-fluid">
+
+            </div>
         </footer>
     </body>
 </html>
