--- a/index.html
+++ b/index.html
@@ -32,37 +32,51 @@
             
             <!--Portfolio con immagini 1-->
             <h4 class="text-center" style="margin-top:1%">PORTFOLIO</h4>
-            <!--<div class="container-fluid">-->
                 <div class="container">
                     <div class="row align-items-start">
                       <div class="col">
                         <div class="shadow rounded">
                             <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
-                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            <div><figure class="text-center"><h5 style="margin-top:3%">Cabin Website</h5></figure>
                             </div>
-                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
-                            molestie vestibulum vestibulum.
-                            </figure>
+                            <div class="row justify-content-center text-center">
+                                <div class="col-3" style="margin-bottom:2%">
+                                  <button class="rounded border border-primary" style="background-color: rgb(8, 201, 226);">Preview</button>
+                                </div>
+                                <div class="col-3">
+                                    <button class="text-primary rounded border border-primary" style="background-color:white">Visit Site</button>
+                                </div>
+                            </div>
                         </div>
                       </div>
                       <div class="col">
                         <div class="shadow rounded">
-                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
-                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            <img src="\img\portfolio\cake.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5 style="margin-top:3%">Cake Website</h5></figure>
                             </div>
-                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
-                            molestie vestibulum vestibulum.
-                            </figure>
+                            <div class="row justify-content-center text-center">
+                                <div class="col-3" style="margin-bottom:2%">
+                                  <button class="rounded border border-primary" style="background-color: rgb(8, 201, 226);">Preview</button>
+                                </div>
+                                <div class="col-3">
+                                    <button class="text-primary rounded border border-primary" style="background-color:white">Visit Site</button>
+                                </div>
+                            </div>
                         </div>
                       </div>
                       <div class="col">
                         <div class="shadow rounded">
-                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
-                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            <img src="\img\portfolio\circus.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5 style="margin-top:3%">Circus Website</h5></figure>
                             </div>
-                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
-                            molestie vestibulum vestibulum.
-                            </figure>
+                            <div class="row justify-content-center text-center">
+                                <div class="col-3" style="margin-bottom:2%">
+                                  <button class="rounded border border-primary" style="background-color: rgb(8, 201, 226);">Preview</button>
+                                </div>
+                                <div class="col-3">
+                                    <button class="text-primary rounded border border-primary" style="background-color:white">Visit Site</button>
+                                </div>
+                            </div>
                         </div>
                       </div>
             </div>
@@ -72,32 +86,47 @@
                     <div class="row align-items-start">
                       <div class="col">
                         <div class="shadow rounded">
-                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
-                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            <img src="\img\portfolio\game.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5 style="margin-top:3%">Game Website</h5></figure>
                             </div>
-                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
-                            molestie vestibulum vestibulum.
-                            </figure>
+                            <div class="row justify-content-center text-center">
+                                <div class="col-3" style="margin-bottom:2%">
+                                  <button class="rounded border border-primary" style="background-color: rgb(8, 201, 226);">Preview</button>
+                                </div>
+                                <div class="col-3">
+                                    <button class="text-primary rounded border border-primary" style="background-color:white">Visit Site</button>
+                                </div>
+                            </div>
                         </div>
                       </div>
                       <div class="col">
                         <div class="shadow rounded">
-                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
-                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            <img src="\img\portfolio\safe.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5 style="margin-top:3%">Safe Website</h5></figure>
                             </div>
-                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
-                            molestie vestibulum vestibulum.
-                            </figure>
+                            <div class="row justify-content-center text-center">
+                                <div class="col-3" style="margin-bottom:2%">
+                                  <button class="rounded border border-primary" style="background-color: rgb(8, 201, 226);">Preview</button>
+                                </div>
+                                <div class="col-3">
+                                    <button class="text-primary rounded border border-primary" style="background-color:white">Visit Site</button>
+                                </div>
+                            </div>
                         </div>
                       </div>
                       <div class="col">
                         <div class="shadow rounded">
-                            <img src="\img\portfolio\cabin.png" class="w-100 " alt="Cabin Website">
-                            <div><figure class="text-center"><h5>Cabin Website</h5></figure>
+                            <img src="\img\portfolio\submarine.png" class="w-100 " alt="Cabin Website">
+                            <div><figure class="text-center"><h5 style="margin-top:3%">Submarine Website</h5></figure>
                             </div>
-                            <figure class="text-center">Sed a iacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi
-                            molestie vestibulum vestibulum.
-                            </figure>
+                            <div class="row justify-content-center text-center">
+                                <div class="col-3" style="margin-bottom:2%">
+                                  <button class="rounded border border-primary" style="background-color: rgb(8, 201, 226);">Preview</button>
+                                </div>
+                                <div class="col-3">
+                                    <button class="text-primary rounded border border-primary" style="background-color:white">Visit Site</button>
+                                </div>
+                            </div>
                         </div>
                       </div>
             </div>
