--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                             <input class="w-100" type="text" id="fname" name="fname"><br><br>
                             <label for="lname">E-mail address:</label><br>
                             <input class="w-100" type="text" id="e-mail" name="e-mail"><br><br>
-                            <label for="TypeofWork">Type of work:</label><br>
-                            <select class="w-100" name="cars" id="cars">
-                                <option value="volvo">Backed Development</option>
+                            <label id="TypeofWork" for="TypeofWork">Type of work:</label><br>
+                            <select class="w-100" name="ToF" id="ToF">
+                                <option value="volvo">Backend Development</option>
                                 <option value="saab">Frontend Development</option>
                                 <option value="opel">Project Analisys</option>
                               </select> 
@@ -153,20 +153,20 @@
                         <form action="/action_page.php">
                             <label for="fname">Last Name:</label><br>
                             <input class="w-100" type="text" id="lname" name="lname"><br><br>
-                            <label for="lname">Hours requested:</label><br>
+                            <label id="HourRequested" for="lname">Hours requested:</label><br>
                             <input class="w-100" type="number" id="Hours" name="Hours"><br><br>
-                            <label for="TypeofWork">Discount code:</label><br>
+                            <label id="DiscountCode" for="Discount-code">Discount code:</label><br>
                             <input class="w-100" type="text" id="discount" name="discount"><br> 
                           </form>
                     </div>
-                    <div class="col-10">
+                    <div class="col-sm-10">
                         <form action="/action_page.php">
                             <label for="Message">Message:</label><br>
                             <input class="w-100 p-4" type="text" id="Message" name="Message"><br><br>
                             <div class="row justify-content-center text-center"></div>
-                            <input type="submit" value="Send">
+                            <div class="text-center"><button class="rounded border-0" style="background-color:darkorange" onlick="CalcoloPrezzo()" type="submit">Send</button></div>
                         </form>
-                        <p id="PrezzoFinale"></p>
+                        <p id="PrezzoFinale"></p> 
                   </div>
                 </div>
             </div>
