--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <label for="Message">Message:</label><br>
                             <input class="w-100 p-4" type="text" id="Message" name="Message"><br><br>
                             <div class="row justify-content-center text-center"></div>
-                            <div class="text-center"><button class="rounded border-0" style="background-color:darkorange" onlick="CalcoloPrezzo()" type="submit">Send</button></div>
+                            <div class="text-center"><button class="rounded border-0" id="Send" style="background-color:darkorange" onlick="CalcoloPrezzo()" type="submit">Send</button></div>
                         </form>
                         <p id="PrezzoFinale"></p> 
                   </div>
