--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                           </form>
                     </div>
                     
-                    <div class="col-sm-10">
+                    <div class="col-10">
                         <form action="/action_page.php">
                             <label for="Message">Message:</label><br>
                             <input class="w-100 p-4" type="text" id="Message" name="Message"><br><br>
